# boot_dev_personal_project

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
cli/: command_handler.py
docs/: README.md  api_refrence.md  architecture.md  user_guide.md
functions/: analysis_controller.py  code_analyzer.py  codebase_discovery.py  dependency_analyzer.py  git_integration.py  issues_formatter.py  results_formatter.py  security_scanner.py
gui/: analyzer_gui.py  gui_components.py  issues_tab.py  results_tab.py  setup_tab.py
utils/: codebase_patterns.py  generate_hook.py  security_patterns.py
